tests/unresolved-type-multiple-parameters.stderr
error: 
  ┌─ test:7:5
  │
7 │ _ : f T
  │     ^
  │     │
  │     could not determine the type of this expression
  │     this has type `T _ -> ()`
  │
  = annotate the type with `::`: `:: {%type%}`
  = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

error: 
   ┌─ test:15:5
   │
15 │ _ : same-types U
   │     ^^^^^^^^^^
   │     │
   │     could not determine the type of this expression
   │     this has type `U a a -> ()` for some unknown type `a`
   │
   = annotate the type with `::`: `:: {%type%}`
   = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

error: 
   ┌─ test:16:5
   │
16 │ _ : different-types U
   │     ^^^^^^^^^^^^^^^
   │     │
   │     could not determine the type of this expression
   │     this has type `U _ _ -> ()`
   │
   = annotate the type with `::`: `:: {%type%}`
   = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

